Bug 400257 - fixes alignment of hit zones

--- a/bundles/org.eclipse.orion.client.ui/web/settings/settings.css
+++ b/bundles/org.eclipse.orion.client.ui/web/settings/settings.css
@@ -29,6 +29,7 @@
 	margin: 0;
 	padding: 0;
 	padding-left:0 !important;
+	padding-right:10px;
 }
 
 .navbar:focus {
